force-app/main/default/objects/Callout_Configuration__mdt/Callout_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Stores the data points needed to do a callout. Created since I couldn&apos;t use Named Credentials for Jooble since the API key is expected in the URL.</description>
    <label>Callout Configuration</label>
    <pluralLabel>Callout Configurations</pluralLabel>
</CustomObject>