force-app/main/default/objects/Callout_Configuration__mdt/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Body for the callout. Parts of the body surrounded in *** are values that the Apex code will replace with the appropriate values at run time.</description>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>