force-app/main/default/objects/Callout_Configuration__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>The endpoint for the callout</description>
    <label>Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>