force-app/main/default/objects/Callout_Configuration__mdt/fields/Header_Key__c.field-meta.xml
<CustomField>
    <fullName>Header_Key__c</fullName>
    <description>The key for the Header used in the callout</description>
    <label>Header Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>