force-app/main/default/objects/Callout_Configuration__mdt/fields/Header_Value__c.field-meta.xml
<CustomField>
    <fullName>Header_Value__c</fullName>
    <description>Value of the header for the callout</description>
    <label>Header Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>