force-app/main/default/objects/Callout_Configuration__mdt/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Method for the callout</description>
    <label>Method</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>