force-app/main/default/objects/Callout_Configuration__mdt/fields/Record_Count_To_Get__c.field-meta.xml
<CustomField>
    <fullName>Record_Count_To_Get__c</fullName>
    <description>Number of records to get in the API call</description>
    <label>Record Count To Get</label>
    <length>5</length>
    <type>Text</type>
</CustomField>